force-app/main/default/objects/Alert__c/Alert__c.object-meta.xml
<CustomObject>
    <label>Alert</label>
    <nameField>
        <displayFormat>A-{00000}</displayFormat>
        <label>Alerts Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Alerts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>