force-app/main/default/objects/Alert__c/fields/Alert_Severity__c.field-meta.xml
<CustomField>
    <fullName>Alert_Severity__c</fullName>
    <description>Select the severity level of this alert.  Yellow is high, Red is critical.</description>
    <inlineHelpText>Select the severity level of this alert.  Yellow is high, Red is critical.</inlineHelpText>
    <label>Alert Severity</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yellow</fullName>
                <default>true</default>
                <label>Yellow</label>
            </value>
            <value>
                <fullName>Red</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>