force-app/main/default/objects/Alert__c/fields/Alert_Status__c.field-meta.xml
<CustomField>
    <fullName>Alert_Status__c</fullName>
    <description>Select the current status for this Alert.</description>
    <inlineHelpText>Select the current status for this Alert.</inlineHelpText>
    <label>Alert Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Open</fullName>
                <default>true</default>
                <label>Open</label>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
            <value>
                <fullName>Canceled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>