force-app/main/default/objects/Alert__c/fields/Alert_Type__c.field-meta.xml
<CustomField>
    <fullName>Alert_Type__c</fullName>
    <description>Select the type of Alert indicating the business area that needs attention.</description>
    <inlineHelpText>Select the type of Alert indicating the business area that needs attention.</inlineHelpText>
    <label>Alert Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Product/Application</fullName>
                <color>#CC0000</color>
                <default>true</default>
                <label>Product/Application</label>
            </value>
            <value>
                <fullName>Support</fullName>
                <color>#0B6FCE</color>
                <label>Support</label>
            </value>
            <value>
                <fullName>Service</fullName>
                <color>#78C953</color>
                <label>Service</label>
            </value>
            <value>
                <fullName>Operations</fullName>
                <color>#8F6429</color>
                <label>Operations</label>
            </value>
            <value>
                <fullName>Billing</fullName>
                <color>#F3D904</color>
                <label>Billing</label>
            </value>
            <value>
                <fullName>Other</fullName>
                <color>#AFCADF</color>
                <label>Other</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>