force-app/main/default/objects/Alert__c/fields/Application__c.field-meta.xml
<CustomField>
    <fullName>Application__c</fullName>
    <description>Select the application causing the customer concern.</description>
    <inlineHelpText>Select the application causing the customer concern.</inlineHelpText>
    <label>Application</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Analytics Manager</fullName>
            </value>
            <value>
                <fullName>CoS Workflow</fullName>
            </value>
            <value>
                <fullName>Critical Event Reporting</fullName>
            </value>
            <value>
                <fullName>CSA</fullName>
            </value>
            <value>
                <fullName>DVIR</fullName>
            </value>
            <value>
                <fullName>eTimecards</fullName>
            </value>
            <value>
                <fullName>GeoFence</fullName>
            </value>
            <value>
                <fullName>HoS</fullName>
            </value>
            <value>
                <fullName>iQ</fullName>
            </value>
            <value>
                <fullName>MMS</fullName>
            </value>
            <value>
                <fullName>Navigation</fullName>
            </value>
            <value>
                <fullName>Performance Monitoring</fullName>
            </value>
            <value>
                <fullName>Predictive Perf</fullName>
            </value>
            <value>
                <fullName>QSP</fullName>
            </value>
            <value>
                <fullName>QTM</fullName>
            </value>
            <value>
                <fullName>Training and Scoring</fullName>
            </value>
            <value>
                <fullName>Vehicle Maintenance</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>