force-app/main/default/objects/Alert__c/fields/Impact__c.field-meta.xml
<CustomField>
    <fullName>Impact__c</fullName>
    <description>What is the impact of this alert on new or existing customer(s) that requires that it gets management visibility?</description>
    <inlineHelpText>What is the impact of this alert on new or existing customer(s) that requires that it gets management visibility?</inlineHelpText>
    <label>Impact</label>
    <type>TextArea</type>
</CustomField>