force-app/main/default/objects/Alert__c/fields/Problem_Statement__c.field-meta.xml
<CustomField>
    <fullName>Problem_Statement__c</fullName>
    <description>Brief statement of the problem (255 character limit).</description>
    <inlineHelpText>Brief statement of the problem (255 character limit).</inlineHelpText>
    <label>Problem Statement</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>