force-app/main/default/objects/Alert__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <description>Select the product causing the customer concern.</description>
    <inlineHelpText>Select the product causing the customer concern.</inlineHelpText>
    <label>Product</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>MCP100</fullName>
            </value>
            <value>
                <fullName>MCP110</fullName>
            </value>
            <value>
                <fullName>MCP200</fullName>
            </value>
            <value>
                <fullName>MCP50</fullName>
            </value>
            <value>
                <fullName>OmniExpress</fullName>
            </value>
            <value>
                <fullName>OmniTracs</fullName>
            </value>
            <value>
                <fullName>T2</fullName>
            </value>
            <value>
                <fullName>TrailerTracs</fullName>
            </value>
            <value>
                <fullName>TT210</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>