force-app/main/default/objects/Alert__c/fields/Product_Related_HW__c.field-meta.xml
<CustomField>
    <fullName>Product_Related_HW__c</fullName>
    <label>Product Related HW</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Antenna</fullName>
            </value>
            <value>
                <fullName>Cables</fullName>
            </value>
            <value>
                <fullName>DIU</fullName>
            </value>
            <value>
                <fullName>MAS</fullName>
            </value>
            <value>
                <fullName>MDU</fullName>
            </value>
            <value>
                <fullName>Mount</fullName>
            </value>
            <value>
                <fullName>WIB</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>