force-app/main/default/objects/Alert__c/fields/Severity__c.field-meta.xml
<CustomField>
    <fullName>Severity__c</fullName>
    <description>Color representation of the Alert Severity value.</description>
    <formula>IMAGE( &quot;/servlet/servlet.FileDownload?file=&quot;&amp; 
IF(TEXT(Alert_Severity__c)=&quot;Red&quot;,&quot;01550000000FzO7&quot;,
IF(TEXT(Alert_Severity__c)=&quot;Yellow&quot;,&quot;01550000000FzOC&quot;,
&quot;01550000000FzOM&quot;)), &quot;Health&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Color representation of the Alert Severity value.</inlineHelpText>
    <label>Severity</label>
    <type>Text</type>
</CustomField>