force-app/main/default/objects/Alert__c/validationRules/Product_Application_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Product_Application_Required</fullName>
    <active>true</active>
    <description>When Alert Type equals Product/Application then Product and/or Application is required.</description>
    <errorConditionFormula>AND(
   TEXT(Alert_Type__c)=&quot;Product/Application&quot;,
   AND(TEXT(Product__c)=&apos;&apos;,TEXT(Application__c)=&apos;&apos;)
        )</errorConditionFormula>
    <errorDisplayField>Product__c</errorDisplayField>
    <errorMessage>When Alert Type equals Product/Application then Product and/or Application is required.</errorMessage>
</ValidationRule>