force-app/main/default/objects/Alert__c/validationRules/Resolution_Required_on_Close_or_Cancel.validationRule-meta.xml
<ValidationRule>
    <fullName>Resolution_Required_on_Close_or_Cancel</fullName>
    <active>true</active>
    <description>Resolution Required on Close or Cancel</description>
    <errorConditionFormula>AND(ISBLANK( Resolution__c ), OR(TEXT(Alert_Status__c) = &quot;Closed&quot;,TEXT(Alert_Status__c) = &quot;Closed&quot;))</errorConditionFormula>
    <errorDisplayField>Resolution__c</errorDisplayField>
    <errorMessage>A Resolution is required to Close or Cancel an Alert.</errorMessage>
</ValidationRule>