force-app/main/default/objects/Alert__c/listViews/All_Alerts.listView-meta.xml
<ListView>
    <fullName>All_Alerts</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All Alerts</label>
    <language>en_US</language>
</ListView>